[package]
name = "iroha2019-day2"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
iroha2019-day2-a = { alias = "a", problem = "https://atcoder.jp/contests/iroha2019-day2/tasks/iroha2019_day2_a" }
iroha2019-day2-b = { alias = "b", problem = "https://atcoder.jp/contests/iroha2019-day2/tasks/iroha2019_day2_b" }
iroha2019-day2-c = { alias = "c", problem = "https://atcoder.jp/contests/iroha2019-day2/tasks/iroha2019_day2_c" }
iroha2019-day2-d = { alias = "d", problem = "https://atcoder.jp/contests/iroha2019-day2/tasks/iroha2019_day2_d" }
iroha2019-day2-e = { alias = "e", problem = "https://atcoder.jp/contests/iroha2019-day2/tasks/iroha2019_day2_e" }
iroha2019-day2-f = { alias = "f", problem = "https://atcoder.jp/contests/iroha2019-day2/tasks/iroha2019_day2_f" }
iroha2019-day2-g = { alias = "g", problem = "https://atcoder.jp/contests/iroha2019-day2/tasks/iroha2019_day2_g" }
iroha2019-day2-h = { alias = "h", problem = "https://atcoder.jp/contests/iroha2019-day2/tasks/iroha2019_day2_h" }
iroha2019-day2-i = { alias = "i", problem = "https://atcoder.jp/contests/iroha2019-day2/tasks/iroha2019_day2_i" }
iroha2019-day2-j = { alias = "j", problem = "https://atcoder.jp/contests/iroha2019-day2/tasks/iroha2019_day2_j" }
iroha2019-day2-k = { alias = "k", problem = "https://atcoder.jp/contests/iroha2019-day2/tasks/iroha2019_day2_k" }

[[bin]]
name = "iroha2019-day2-a"
path = "src/bin/a.rs"

[[bin]]
name = "iroha2019-day2-b"
path = "src/bin/b.rs"

[[bin]]
name = "iroha2019-day2-c"
path = "src/bin/c.rs"

[[bin]]
name = "iroha2019-day2-d"
path = "src/bin/d.rs"

[[bin]]
name = "iroha2019-day2-e"
path = "src/bin/e.rs"

[[bin]]
name = "iroha2019-day2-f"
path = "src/bin/f.rs"

[[bin]]
name = "iroha2019-day2-g"
path = "src/bin/g.rs"

[[bin]]
name = "iroha2019-day2-h"
path = "src/bin/h.rs"

[[bin]]
name = "iroha2019-day2-i"
path = "src/bin/i.rs"

[[bin]]
name = "iroha2019-day2-j"
path = "src/bin/j.rs"

[[bin]]
name = "iroha2019-day2-k"
path = "src/bin/k.rs"

[dependencies]
petgraph = "0.5.0"
proconio = "0.3.6"

[dev-dependencies]
